// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BccInput > can render an extra label if the input is optional 1`] = `
"<div class=\\"inline-flex flex-col space-y-2\\"><label class=\\"space-y-2\\"><span class=\\"flex gap-x-2 justify-end\\"><!--v-if--><span class=\\"bcc-input-optional-label\\">Custom optional label</span></span><input class=\\"bcc-input\\"></label>
  <!--v-if-->
</div>"
`;

exports[`BccInput > does not render a text if the input is both required and optional 1`] = `
"<div class=\\"inline-flex flex-col space-y-2\\"><label class=\\"space-y-2\\">
    <!--v-if--><input required=\\"\\" class=\\"bcc-input\\">
  </label>
  <!--v-if-->
</div>"
`;

exports[`BccInput > renders a label 1`] = `
"<div class=\\"inline-flex flex-col space-y-2\\"><label class=\\"space-y-2\\"><span class=\\"flex gap-x-2\\"><span class=\\"bcc-input-label\\">Test label</span>
    <!--v-if--></span><input class=\\"bcc-input\\">
  </label>
  <!--v-if-->
</div>"
`;

exports[`BccInput > renders a text from the default slot 1`] = `
"<div class=\\"inline-flex flex-col space-y-2\\"><label class=\\"space-y-2\\">
    <!--v-if--><input class=\\"bcc-input\\">
  </label><span class=\\"bcc-input-message-default\\">Test message</span></div>"
`;

exports[`BccInput > renders without a label or optional text 1`] = `
"<div class=\\"inline-flex flex-col space-y-2\\"><label class=\\"space-y-2\\">
    <!--v-if--><input class=\\"bcc-input\\">
  </label>
  <!--v-if-->
</div>"
`;
